JumpScript/tests/baselines/reference/scannerImportDeclaration1.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerImportDeclaration1.jump(1,21): error TS2503: Cannot find namespace 'JumpScriptServices'.


==== tests/cases/conformance/scanner/ecmascript5/scannerImportDeclaration1.jump (1 errors) ====
    import JumpScript = JumpScriptServices.JumpScript;
                        ~~~~~~~~~~~~~~~~~~
!!! error TS2503: Cannot find namespace 'JumpScriptServices'.